--- a/prisma-encryptor-middleware/vault/package.json
+++ b/prisma-encryptor-middleware/vault/package.json
@@ -7,7 +7,7 @@
     "@prisma/client": "^3.10.0",
     "dotenv": "^8.2.0",
     "node-vault": "^0.9.21",
-    "prisma-encryptor-middleware": "file:../../prisma-encryptor-middleware"
+    "prisma-encryptor-middleware": "file:../../../prisma-encryptor-middleware"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
