--- a/prisma-encryptor-middleware/vault/package.json
+++ b/prisma-encryptor-middleware/vault/package.json
@@ -16,7 +16,7 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "init-vault": "ts-node src/init.ts && ts-node src/mount.ts",
+    "init-vault": "ts-node src/vault/init.ts && ts-node src/vault/mount.ts",
     "start": "ts-node src/main.ts"
   }
 }
