--- a/prisma-encryptor-middleware/vault/package.json
+++ b/prisma-encryptor-middleware/vault/package.json
@@ -11,12 +11,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
-    "prisma": "^3.10.0",
+    "prisma": "^3.11.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "init-vault": "ts-node src/init.ts && ts-node src/mount.ts",
+    "init-database": "npx prisma db push",
+    "init-vault": "ts-node src/vault/init.ts && ts-node src/vault/mount.ts",
     "start": "ts-node src/main.ts"
   }
 }
