--- a/prisma-encryptor-middleware/kms/package.json
+++ b/prisma-encryptor-middleware/kms/package.json
@@ -4,18 +4,19 @@
   "main": "index.js",
   "license": "",
   "dependencies": {
-    "@prisma/client": "^3.9.2",
+    "@prisma/client": "^3.11.0",
     "dotenv": "^8.2.0",
     "node-vault": "^0.9.21",
     "prisma-encryptor-middleware": "file:../../../prisma-encryptor-middleware"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
-    "prisma": "^3.9.2",
+    "prisma": "^3.11.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "scripts": {
+    "init-database": "npx prisma db push",
     "start": "ts-node src/main.ts"
   }
 }
