Updated with remotely installable package

--- a/prisma-encryptor-middleware/kms/package.json
+++ b/prisma-encryptor-middleware/kms/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "",
   "dependencies": {
+    "@prisma-solutions-engineering/prisma-encryptor-middleware": "npm:null@*",
     "@prisma/client": "^3.11.0",
     "dotenv": "^8.2.0",
-    "node-vault": "^0.9.21",
     "prisma-encryptor-middleware": "file:../../../prisma-encryptor-middleware"
   },
   "devDependencies": {
