--- a/prisma-encryptor-middleware/kms/package.json
+++ b/prisma-encryptor-middleware/kms/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "",
   "dependencies": {
-    "@prisma-solutions-engineering/prisma-encryptor-middleware": "0.1.0",
+    "@prisma-solutions-engineering/prisma-encryptor-middleware": "^0.1.1",
     "@prisma/client": "^3.11.0",
     "dotenv": "^8.2.0"
   },
